fix: update z-index

--- a/packages/devtools-ui-kit/src/assets/styles.css
+++ b/packages/devtools-ui-kit/src/assets/styles.css
@@ -25,10 +25,10 @@ html.dark {
   z-index: 1;
 }
 ::view-transition-new(root) {
-  z-index: 9999;
+  z-index: 2147483646;
 }
 .dark::view-transition-old(root) {
-  z-index: 9999;
+  z-index: 2147483646;
 }
 .dark::view-transition-new(root) {
   z-index: 1;
